# RazerBatteryLevel

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: render_check.rs
openspec/changes/tray-battery-percentage-icons/: design.md  proposal.md  tasks.md
openspec/changes/tray-battery-percentage-icons/specs/tray-battery-icon/: spec.md
src/: controller.rs  devices.rs  icon.rs  icon_data.rs  main.rs  manager.rs  settings.rs  tray.rs
tools/: generate_icons.py
