[package]
name = "razer-battery-report"
version = "0.3.1"
authors = ["xzeldon <contact@zeldon.ru>"]
edition = "2021"
description = "Razer Battery Level Tray Indicator"

# Slower builds, faster executables
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Faster builds, slower executables
[profile.dev]
opt-level = 0
lto = false
incremental = true
codegen-units = 16

[dependencies]
# Communicate with HID devices
hidapi = "2.6.4"

# Logging
log = "0.4.29"
pretty_env_logger = "0.5.0"

# Event Loop and Tray Icon
tao = "0.34.5"
tray-icon = "0.21.2"

# SVG rasterization for numeric battery tray icons.
# `resvg` re-exports `usvg` (parse) and `tiny_skia` (raster), so no separate deps.
resvg = "0.45"

# Windows API
winapi = { version = "0.3.9", features = ["winuser", "wincon", "consoleapi"] }

# Efficient synchronization primitives (e.g. Mutex, RwLock and etc.)
parking_lot = "0.12"

# Desktop notifications
notify-rust = "4.11.7"

# Read the Windows taskbar theme (Auto mode) and persist the user's choice
winreg = "0.52"
